@@ -1,13 +1,13 @@
 package com.tasksprints.auction.domain.auction.service;
 
+import com.tasksprints.auction.domain.auction.dto.request.AuctionRequest;
 import com.tasksprints.auction.domain.auction.dto.response.AuctionResponse;
 import com.tasksprints.auction.domain.auction.exception.AuctionAlreadyClosedException;
 import com.tasksprints.auction.domain.auction.exception.AuctionNotFoundException;
 import com.tasksprints.auction.domain.auction.exception.InvalidAuctionTimeException;
 import com.tasksprints.auction.domain.auction.model.Auction;
-import com.tasksprints.auction.domain.auction.repository.AuctionRepository;
 import com.tasksprints.auction.domain.auction.model.AuctionStatus;
-import com.tasksprints.auction.domain.auction.dto.request.AuctionRequest;
+import com.tasksprints.auction.domain.auction.repository.AuctionRepository;
 import com.tasksprints.auction.domain.user.exception.UserNotFoundException;
 import com.tasksprints.auction.domain.user.model.User;
 import com.tasksprints.auction.domain.user.repository.UserRepository;
@@ -16,7 +16,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -28,18 +27,18 @@ public class AuctionServiceImpl implements AuctionService {
     @Override
     public AuctionResponse createAuction(Long userId, AuctionRequest.Create auctionRequest) {
         User seller = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
+            .orElseThrow(() -> new UserNotFoundException("User not found"));
         if (auctionRequest.getStartTime().isAfter(auctionRequest.getEndTime())) {
             throw new InvalidAuctionTimeException("End time must be after start time");
         }
 
         Auction newAuction = Auction.create(
-                auctionRequest.getStartTime(),
-                auctionRequest.getEndTime(),
-                auctionRequest.getStartingBid(),
-                auctionRequest.getAuctionCategory(),
-                auctionRequest.getAuctionStatus(),
-                seller
+            auctionRequest.getStartTime(),
+            auctionRequest.getEndTime(),
+            auctionRequest.getStartingBid(),
+            auctionRequest.getAuctionCategory(),
+            auctionRequest.getAuctionStatus(),
+            seller
         );
 
         Auction savedAuction = auctionRepository.save(newAuction);
@@ -57,7 +56,7 @@ public class AuctionServiceImpl implements AuctionService {
     @Override
     public void closeAuction(Long auctionId) {
         Auction auction = auctionRepository.findById(auctionId)
-                .orElseThrow(() -> new AuctionNotFoundException("Auction not found"));
+            .orElseThrow(() -> new AuctionNotFoundException("Auction not found"));
 
         if (auction.getAuctionStatus() == AuctionStatus.CLOSED) {
             throw new AuctionAlreadyClosedException("Auction is already closed");
@@ -68,7 +67,7 @@ public class AuctionServiceImpl implements AuctionService {
     @Override
     public String getAuctionStatus(Long auctionId) {
         Auction auction = auctionRepository.findById(auctionId)
-                .orElseThrow(() -> new AuctionNotFoundException("Auction not found"));
+            .orElseThrow(() -> new AuctionNotFoundException("Auction not found"));
 
         return auction.getAuctionStatus().name();
     }
@@ -76,28 +75,44 @@ public class AuctionServiceImpl implements AuctionService {
     @Override
     public List<AuctionResponse> getAuctionsByUser(Long userId) {
         User seller = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
+            .orElseThrow(() -> new UserNotFoundException("User not found"));
 
-        List<Auction> foundAuctions =  auctionRepository.findAuctionsByUserId(seller.getId());
+        List<Auction> foundAuctions = auctionRepository.findAuctionsByUserId(seller.getId());
 
         return foundAuctions.stream()
-                .map(AuctionResponse::of)
-                .collect(Collectors.toList());
+            .map(AuctionResponse::of)
+            .toList();
     }
+
 
     @Override
     public List<AuctionResponse> getAllAuctions() {
-        List<Auction> foundAuctions =  auctionRepository.findAll();
+        List<Auction> foundAuctions = auctionRepository.findAll();
         return foundAuctions.stream()
-                .map(AuctionResponse::of)
-                .collect(Collectors.toList());
+            .map(AuctionResponse::of)
+            .toList();
     }
 
     @Override
     public AuctionResponse getAuctionById(Long auctionId) {
-        Auction foundAuction =  auctionRepository.findAuctionById(auctionId)
-                .orElseThrow(() -> new AuctionNotFoundException("Auction not found"));
+        Auction foundAuction = auctionRepository.findAuctionById(auctionId)
+            .orElseThrow(() -> new AuctionNotFoundException("Auction not found"));
 
         return AuctionResponse.of(foundAuction);
+    }
+
+    /**
+     * NULL POINTER EXCEPTION 발생
+     * NULL 안정성 보장을 해줬음
+     **/
+    @Override
+    public List<AuctionResponse> getAuctionsByFilter(AuctionRequest.SearchCondition searchCondition) {
+        List<Auction> foundAuctions = auctionRepository.getAuctionsByFilters(
+            searchCondition
+        );
+
+        return foundAuctions.stream()
+            .map(AuctionResponse::of)
+            .toList();
     }
 }
